import { createElement } from 'lwc';
import Element from 'lightning/avatar';
import { shadowQuerySelector } from 'lightning/testUtils';

const createAvatar = () => {
    const element = createElement('lightning-avatar', { is: Element });
    document.body.appendChild(element);
    return element;
};

describe('lightning-avatar', () => {
    it('default', () => {
        const element = createAvatar();
        element.alternativeText = 'required alternative text';

        return Promise.resolve().then(() => {
            expect(element).toMatchSnapshot();
        });
    });

    describe('testFallbackIconName', () => {
        it('lightning:icon should render', () => {
            const element = createAvatar();

            element.alternativeText = 'required alternative text';
            element.fallbackIconName = 'standard:account';
            element.initials = ''; // invalid
            element.src = ''; // invalid

            return Promise.resolve().then(() => {
                const icon = shadowQuerySelector(element, 'lightning-icon');
                expect(icon).toBeTruthy();
            });
        });

        it('lightning:icon should still render even when the icon name is invalid', () => {
            const element = createAvatar();

            element.alternativeText = 'required alternative text';
            element.fallbackIconName = '';
            element.initials = ''; // invalid
            element.src = ''; // invalid

            return Promise.resolve().then(() => {
                const icon = shadowQuerySelector(element, 'lightning-icon');
                expect(icon).toBeTruthy();
            });
        });
    });

    describe('initials', () => {
        it('should not render when invalid', () => {
            const element = createAvatar();

            element.alternativeText = 'required alternative text';
            element.fallbackIconName = 'standard:account';
            element.initials = ''; // invalid
            element.src = ''; // invalid

            return Promise.resolve().then(() => {
                const abbr = shadowQuerySelector(element, 'abbr');
                expect(abbr).toBeFalsy();
            });
        });

        it('should render when valid', () => {
            const element = createAvatar();

            element.alternativeText = 'required alternative text';
            element.fallbackIconName = 'standard:account';
            element.initials = 'EK';
            element.src = ''; // invalid

            return Promise.resolve().then(() => {
                const abbr = shadowQuerySelector(element, 'abbr');
                expect(abbr).toBeTruthy();
            });
        });

        it('should render class slds-icon-custom-custom79 when fallbackIconName is custom:custom79', () => {
            const element = createAvatar();

            element.alternativeText = 'required alternative text';
            element.fallbackIconName = 'custom:custom79';
            element.initials = 'EK';
            element.src = ''; // invalid

            return Promise.resolve().then(() => {
                const abbr = shadowQuerySelector(element, 'abbr');
                expect(abbr.className).toContain('slds-icon-custom-custom79');
            });
        });
    });

    describe('testSrcAttribute', () => {
        it('image src should be correct when changed', () => {
            const element = createAvatar();

            element.alternativeText = 'account owner';
            element.fallbackIconName = 'standard:account';
            element.initials = 'EK';
            element.src = '/assets/images/avatar2.jpg';

            return Promise.resolve()
                .then(() => {
                    expect(element).toMatchSnapshot();

                    element.src = '/assets/images/avatar1.jpg';

                    return Promise.resolve();
                })
                .then(() => {
                    expect(element).toMatchSnapshot();
                });
        });

        it('An img element should not render when v.src is undefined', () => {
            const element = createAvatar();

            return Promise.resolve().then(() => {
                expect(element).toMatchSnapshot();
            });
        });
    });

    describe('testAltTitleAttributes', () => {
        it('Avatar component should set title of image correctly', () => {
            const element = createAvatar();

            element.alternativeText = 'account owner';
            element.fallbackIconName = 'standard:account';
            element.src = '/assets/images/avatar2.jpg';

            return Promise.resolve()
                .then(() => {
                    expect(element).toMatchSnapshot();

                    element.alternativeText = 'Salesforce Contact';

                    return Promise.resolve();
                })
                .then(() => {
                    expect(element).toMatchSnapshot();
                });
        });
    });

    describe('Variant', () => {
        const createAvatarWithVariant = variant => {
            const element = createAvatar();

            element.alternativeText = 'account owner';
            element.fallbackIconName = 'standard:account';
            element.src = '/assets/images/avatar2.jpg';
            element.variant = variant;

            return element;
        };

        it('should add default classes on invalid variant', () => {
            const element = createAvatarWithVariant('invalid');

            return Promise.resolve().then(() => {
                expect(element).toMatchSnapshot();
            });
        });

        it('should add correct classes on circle variant', () => {
            const element = createAvatarWithVariant('circle');

            return Promise.resolve().then(() => {
                expect(element).toMatchSnapshot();
            });
        });

        it('should add correct classes on square variant', () => {
            const element = createAvatarWithVariant('square');

            return Promise.resolve().then(() => {
                expect(element).toMatchSnapshot();
            });
        });
    });

    describe('Size', () => {
        const createAvatarWithSize = size => {
            const element = createAvatar();

            element.alternativeText = 'account owner';
            element.fallbackIconName = 'standard:account';
            element.src = '/assets/images/avatar2.jpg';
            element.size = size;

            return element;
        };

        it('should add default classes on invalid size', () => {
            const element = createAvatarWithSize('invalid');

            return Promise.resolve().then(() => {
                expect(element).toMatchSnapshot();
            });
        });

        it('should add correct classes on x-small size', () => {
            const element = createAvatarWithSize('x-small');

            return Promise.resolve().then(() => {
                expect(element).toMatchSnapshot();
            });
        });

        it('should add correct classes on small size', () => {
            const element = createAvatarWithSize('small');

            return Promise.resolve().then(() => {
                expect(element).toMatchSnapshot();
            });
        });

        it('should add correct classes on medium size', () => {
            const element = createAvatarWithSize('medium');

            return Promise.resolve().then(() => {
                expect(element).toMatchSnapshot();
            });
        });

        it('should add correct classes on large size', () => {
            const element = createAvatarWithSize('large');

            return Promise.resolve().then(() => {
                expect(element).toMatchSnapshot();
            });
        });
    });

    it('testTypePriority', () => {
        const element = createAvatar();

        element.alternativeText = 'required alternative text';
        element.fallbackIconName = 'standard:account';
        element.src = '/assets/images/avatar2.jpg';

        return Promise.resolve()
            .then(() => {
                expect(element).toMatchSnapshot();

                element.src = ''; // invalid
                element.initials = 'EK';

                return Promise.resolve();
            })
            .then(() => {
                expect(element).toMatchSnapshot();

                element.src = ''; // invalid
                element.initials = ''; // invalid

                return Promise.resolve();
            })
            .then(() => {
                expect(element).toMatchSnapshot();

                element.src = '/assets/images/avatar1.jpg';
                element.initials = 'Xx';

                return Promise.resolve();
            })
            .then(() => {
                expect(element).toMatchSnapshot();
            });
    });

    it('testSrcAttribute using valid and invalid src', () => {
        const element = createAvatar();

        element.alternativeText = 'account owner';
        element.fallbackIconName = 'standard:account';
        element.initials = 'EK';
        element.src = '/assets/images/avatar2.jpg';

        return Promise.resolve()
            .then(() => {
                const img = shadowQuerySelector(element, 'img');
                expect(img).not.toBeNull();
                expect(img.src).toBe('/assets/images/avatar2.jpg');
                element.src = '';
            })
            .then(() => {
                expect(shadowQuerySelector(element, 'img')).toBeNull();
                element.src = '/assets/images/avatar1.jpg';
            })
            .then(() => {
                const img = shadowQuerySelector(element, 'img');
                expect(img).not.toBeNull();
                expect(img.src).toBe('/assets/images/avatar1.jpg');
            });
    });
});
