// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-avatar Size should add correct classes on large size 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_large"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar Size should add correct classes on medium size 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar Size should add correct classes on small size 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_small"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar Size should add correct classes on x-small size 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_x-small"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar Size should add default classes on invalid size 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar Variant should add correct classes on circle variant 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium slds-avatar_circle"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar Variant should add correct classes on square variant 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar Variant should add default classes on invalid variant 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar default 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <lightning-icon
      class="slds-icon_container"
      title="required alternative text"
    >
      #shadow-root(open)
        <lightning-primitive-icon>
          #shadow-root(open)
            <svg
              aria-hidden="true"
              class="slds-icon"
              data-key=""
              focusable="false"
            >
              <use
                xlink:href=""
              />
            </svg>
        </lightning-primitive-icon>
        <span
          class="slds-assistive-text"
        >
          required alternative text
        </span>
    </lightning-icon>
</lightning-avatar>
`;

exports[`lightning-avatar testAltTitleAttributes Avatar component should set title of image correctly 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar testAltTitleAttributes Avatar component should set title of image correctly 2`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="Salesforce Contact"
      src="/assets/images/avatar2.jpg"
      title="Salesforce Contact"
    />
</lightning-avatar>
`;

exports[`lightning-avatar testSrcAttribute An img element should not render when v.src is undefined 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <lightning-icon
      class="slds-icon_container"
      title=""
    >
      #shadow-root(open)
        <lightning-primitive-icon>
          #shadow-root(open)
            <svg
              aria-hidden="true"
              class="slds-icon"
              data-key=""
              focusable="false"
            >
              <use
                xlink:href=""
              />
            </svg>
        </lightning-primitive-icon>
    </lightning-icon>
</lightning-avatar>
`;

exports[`lightning-avatar testSrcAttribute image src should be correct when changed 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar2.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar testSrcAttribute image src should be correct when changed 2`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="account owner"
      src="/assets/images/avatar1.jpg"
      title="account owner"
    />
</lightning-avatar>
`;

exports[`lightning-avatar testTypePriority 1`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="required alternative text"
      src="/assets/images/avatar2.jpg"
      title="required alternative text"
    />
</lightning-avatar>
`;

exports[`lightning-avatar testTypePriority 2`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <abbr
      class="slds-avatar__initials slds-icon-standard-account"
      title="required alternative text"
    >
      EK
    </abbr>
</lightning-avatar>
`;

exports[`lightning-avatar testTypePriority 3`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <lightning-icon
      class="slds-icon-standard-account slds-icon_container"
      title="required alternative text"
    >
      #shadow-root(open)
        <lightning-primitive-icon>
          #shadow-root(open)
            <svg
              aria-hidden="true"
              class="slds-icon"
              data-key="account"
              focusable="false"
            >
              <use
                xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
              />
            </svg>
        </lightning-primitive-icon>
        <span
          class="slds-assistive-text"
        >
          required alternative text
        </span>
    </lightning-icon>
</lightning-avatar>
`;

exports[`lightning-avatar testTypePriority 4`] = `
<lightning-avatar
  class="slds-avatar slds-avatar_medium"
>
  #shadow-root(open)
    <img
      alt="required alternative text"
      src="/assets/images/avatar1.jpg"
      title="required alternative text"
    />
</lightning-avatar>
`;
